# Nullforge

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labels.yaml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yaml  FEATURE-REQUEST.yaml
.github/workflows/: check-commit-message-pr.yaml  labels.yaml
nullforge/foundry/: full_cast.py
nullforge/inventories/: example.py
nullforge/models/: __init__.py  containers.py  dns.py  users.py  warp.py
nullforge/molds/: __init__.py  base.py  containers.py  dns.py  docker.py  features.py  haproxy.py  inet.py  netsec.py  profiles.py  system.py  tor.py  user.py  utils.py  warp.py  xray.py
nullforge/runes/: base.py  cloudflare.py  containers.py  dns.py  docker.py  haproxy.py  inet.py  netsec.py  prepare.py  profiles.py  tor.py  users.py  warp.py  xray.py
nullforge/smithy/: __init__.py  admin.py  arch.py  http.py  network.py  versions.py
nullforge/templates/: __init__.py  sysctl-99.conf.j2  torrc.j2
nullforge/templates/dns/: dns.yaml.j2  resolved.conf.j2
nullforge/templates/nvim/: nvim_patch.lua.j2
nullforge/templates/profiles/: direnv.toml  starship.toml  zshrc.j2
nullforge/templates/scripts/: warp-check.sh  warp-v6-policy.sh  zt-tunnel-warp.sh
nullforge/templates/systemd/: cloudflare-dns.service.j2  cloudflare-tunnel.service.j2  cloudflare-warp-check.service.j2  cloudflare-warp-check.timer.j2  cloudflare-warp.service.j2
nullforge/templates/tor/: torrc.j2
