[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "nullforge"
version = "0.1.0"
description = "Forge the server's baseline from null"
maintainers = [ { name = "Renat Mustafin", email = "mustafinrr.rm@gmail.com" } ]
authors = [ { name = "Renat Mustafin", email = "mustafinrr.rm@gmail.com" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pydantic",
  "pyinfra",
]

[dependency-groups]
dev = [ "pre-commit", "ruff" ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "nullforge" ]

[tool.ruff]
line-length = 120

lint.select = [ "E", "F", "I", "N", "S", "UP", "W", "YTT" ]
lint.isort.lines-after-imports = 2
ignore = [
  "S108", # Probable insecure usage of temporary file or directory
]
